2001-03-12  Dave Peticolas  <dave@krondo.com>

	* src/scm/html-table.scm ((gnc:make-html-table-header-cell/markup
	markup . objects)): new func

	* src/scm/report/taxtxf.scm: more work on porting

	* src/scm/html-style-sheet.scm: add "<number-cell>" and
	"<number-header>" styles.

	* src/scm/report/account-summary.scm: use "Total" not "Net
	Assets". This is a general report, not just limited to asset
	accounts.

2001-03-10  Dave Peticolas  <dave@krondo.com>

	* src/engine/Ledger-xml-parser-v1.c
	(ledger_data_after_child_handler): mark pricedb as clean after
	loading

2001-03-09  Bill Gribble  <grib@billgribble.com>

	* add configure/acconfig option for GPG

	* src/gnome/gng-gpg.c: add handlers for creation of keypair
	(with passphrase) and for exporting public key block to GnuCash
	Network server.  Fix bugs in old keypair creator.  Add passphrase
	handling to data encrypt/decrypt.

	* src/gnome/gnc-html-actions.c: rewrite privacy notice to use
	GnuCash Network terminology.  The longer you guys wait to bitch
	about the name the more stuck it is.  Rewrite gnc-info/form handler
	to submit GnuCash version and feature information.

	* src/gnome/gnc-html.c: respect global preferences for HTTP, SSL,
	and GnuCash Network transactions.  Change submit handler calls to
	unpack encoded form data into a hash table and possibly re-encode
	and re-pack if necessary.  Fix bugs in submit handler lookups.
	Add RFC-1738 decoder to go with the encoder. 

	* src/gnome/window-help.c: fix bugs in Open dialog.

	* src/scm/html-table.scm: Add new table-cell/markup and
	append-row/markup functions to make it easier to set semantic data
	styles in style sheets.  Remove dead code. 

	* src/sc/prefs.scm: New preferences section, "Network", with
	options to globally disable HTTP, SSL, and GnuCash Network, and to
	assign the GnuCash Network server name.

	* src/scm/report/table-test.scm: new test report to demonstrate 
	row and cell semantic style
	